fix the liabel and paginator contrast for search statuses constitution

--- a/slice/src/components/pager/pager.scss
+++ b/slice/src/components/pager/pager.scss
@@ -2,7 +2,7 @@
   
   a {
     font-weight: bold;
-    color: $color-gray-2;
+    color: $color-gray-4;
   }
 
   &__items {
